--- a/01_basics/index.html
+++ b/01_basics/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Javascript</title>
+  <!-- <script src="01_basics.js"></script> -->
+  <script src="02_datatypes.js"></script>
 </head>
 
 <body>
