feat: Add Day 2 content - conditionals, loops, objects, and review quiz
- Add conditional statements (if/else, switch, ternary operator) in 03_conditional.js
- Add loops (for, forEach, while) with practical examples in 04_loops.js
- Add objects with properties, nested structures, and methods in 05_objects.js
- Create comprehensive Day 1 review quiz covering all fundamental topics
- Update index.html to reference new object examples
- Update README.md with detailed Week 1 Day 1-2 curriculum overview

The review quiz includes 15 questions + bonus challenge covering:
- Variable declarations and best practices
- Data types and type checking
- String operations (concatenation vs template literals)
- Arithmetic and logical operators
- Arrays and indexing
- Comparison operators (loose vs strict equality)

--- a/01_basics/index.html
+++ b/01_basics/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Javascript</title>
   <!-- <script src="01_basics.js"></script> -->
-  <script src="02_datatypes.js"></script>
+  <!-- <script src="04_loops.js"></script> -->
+  <script src="05_objects.js"></script>
 </head>
 
 <body>
