finish the shop receipt exercise

--- a/01_basics/index.html
+++ b/01_basics/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Javascript</title>
-  <script src="05_objects.js"></script>
+  <script src="00_exercises/04_shop_receipt.js"></script>
 </head>
 
 <body>
