--- a/02_dom/03_form_validation/index.html
+++ b/02_dom/03_form_validation/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Example Form Validation</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="code_submit.js" defer></script>
-  <!-- <script src="code_focus.js" defer></script> -->
+  <!-- <script src="code_submit.js" defer></script> -->
+  <script src="code_focus.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
